Fix home page CSS layout to prevent overflow at certain window widths (#777).

--- a/docs/_includes/components/toc.css
+++ b/docs/_includes/components/toc.css
@@ -2,13 +2,13 @@
 	font-size: 1rem; /* Reset */
 }
 .elv-toc details {
-	--details-force-closed: (max-width: 63.9375em); /* 1023px */
+	--details-force-closed: (max-width: 79.9375em); /* 1023px */
 }
 .elv-toc details > summary {
 	font-size: 1.375rem; /* 22px /16 */
 	margin-bottom: .5em;
 }
-@media (min-width: 64em) { /* 1024px */
+@media (min-width: 80em) {
 	.elv-toc {
 		position: absolute;
 		left: 3rem;
